# voxel_texture

./: CMakeLists.txt  README.md
cmake/: BuildGlad.cmake  BuildImgui.cmake
include/: BounderVoxel.h  Drawmodel.h  Gui.h  RAWmodel.h  SOM.h  Vertex.h  camera.h  item.h  logger.h  matrixStack.h  shader.h  textureMap.h  world.h
raw/: ball21.inf  ball21.raw  ball257.inf  ball67.raw  ballno.inf  ballno.raw  cube.inf  cube.raw  stanford_bunny.inf  tetrahedron.inf  tetrahedron.raw  tetrahedronno.inf  tetrahedronno.raw  utah_teapot.inf  vase01.inf
shader/: lightShader.fs  lightShader.vs
src/: Drawmodel.cpp  Gui.cpp  RAWmodel.cpp  SOM.cpp  logger.c  main.cpp  matrixStack.cpp  textureMap.cpp  world.cpp
stl/: ball.stl  ballno.stl  halfCylinder_big.stl  som.stl  som_2d.stl  som_3d.stl  square.stl  tetrahedronno.stl
